frontend/ug.output
   0  $accept : program $end

   1  program : program function new_lines
   2          | function new_lines
   3          | function
   4          | program function

   5  func_body : '{' stmt_list '}'
   6            | '{' new_lines stmt_list '}'

   7  new_lines : new_lines NEWLINE
   8            | NEWLINE

   9  function : INK ID '(' par_list ')' ARROW RET_TYPE func_body
  10           | INK ID '(' ')' ARROW RET_TYPE func_body
  11           | INK ID '(' par_list ')' ARROW RET_TYPE new_lines func_body
  12           | INK ID '(' ')' ARROW RET_TYPE new_lines func_body

  13  RET_TYPE : datatype
  14           | VOID

  15  par_list : par_list ',' par
  16           | par

  17  par : datatype ID

  18  datatype : IMG
  19           | GRAY_IMG
  20           | VID
  21           | GRAY_VID
  22           | NUM
  23           | REAL
  24           | BOOL

  25  stmt_list : stmt
  26            | stmt_list stmt

  27  stmt : decl_stmt
  28       | call_stmt new_lines
  29       | in_built_call_stmt new_lines
  30       | expr_stmt
  31       | return_stmt
  32       | '{' new_lines stmt_list '}'
  33       | '{' stmt_list '}'

  34  return_stmt : RETURN expr_pred new_lines
  35              | RETURN VOID new_lines

  36  decl_stmt : img_decl
  37            | gray_img_decl
  38            | vid_decl
  39            | gray_vid_decl
  40            | num_decl
  41            | real_decl
  42            | num_array_decl
  43            | real_array_decl

  44  img_decl : IMG ID '<' NUM_LIT ',' NUM_LIT '>' new_lines
  45           | IMG ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines
  46           | IMG ID '<' PATH '>' new_lines
  47           | IMG ID '=' expr_pred new_lines

  48  gray_img_decl : GRAY_IMG ID '<' NUM_LIT ',' NUM_LIT '>' new_lines
  49                | GRAY_IMG ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines
  50                | GRAY_IMG ID '<' PATH '>' new_lines
  51                | GRAY_IMG ID '=' expr_pred new_lines

  52  vid_decl : VID ID '<' NUM_LIT ',' NUM_LIT '>' new_lines
  53           | VID ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines

  54  gray_vid_decl : GRAY_VID ID '<' NUM_LIT ',' NUM_LIT '>' new_lines
  55                | GRAY_VID ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines

  56  num_decl : NUM ID new_lines
  57           | NUM ID '=' expr_pred new_lines

  58  real_decl : REAL ID new_lines
  59            | REAL ID '=' expr_pred new_lines

  60  num_array_decl : NUM array_element ID new_lines
  61                 | NUM array_element ID '=' ID new_lines
  62                 | NUM array_element ID '=' brak_pred new_lines

  63  real_array_decl : REAL array_element ID new_lines
  64                  | REAL array_element ID '=' ID new_lines
  65                  | REAL array_element ID '=' brak_pred new_lines

  66  brak_pred : '{' brak_pred_list '}'
  67            | '{' lit_list '}'

  68  brak_pred_list : brak_pred_list ',' brak_pred
  69                 | brak_pred

  70  lit_list : lit_list ',' lit
  71           | lit

  72  lit : NUM_LIT
  73      | REAL_LIT
  74      | BOOL_LIT

  75  call_stmt : ID '(' arg_list ')'
  76            | ID '(' ')'

  77  arg_list : arg_list ',' expr_pred
  78           | expr_pred

  79  in_built_call_stmt : ID DOT_OP ID '(' arg_list ')'
  80                     | ID DOT_OP ID '(' ')'

  81  expr_pred : ID
  82            | NUM_LIT
  83            | REAL_LIT
  84            | BOOL_LIT
  85            | expr_pred REL_OP expr_pred
  86            | expr_pred LOG_OP expr_pred
  87            | '(' expr_pred ')'
  88            | NEG_OP expr_pred
  89            | call_stmt
  90            | in_built_call_stmt
  91            | ID array_element
  92            | expr_pred BINARY_OP expr_pred
  93            | expr_pred UNARY_OP
  94            | INV_OP expr_pred

  95  expr_stmt : ID '=' expr_pred new_lines
  96            | ID array_element '=' expr_pred new_lines

  97  array_element : '[' expr_pred ']'
  98                | '[' expr_pred ',' expr_pred ']'
  99                | '[' expr_pred ',' expr_pred ',' expr_pred ']'

state 0
	$accept : . program $end  (0)

	INK  shift 1
	.  error

	program  goto 2
	function  goto 3


state 1
	function : INK . ID '(' par_list ')' ARROW RET_TYPE func_body  (9)
	function : INK . ID '(' ')' ARROW RET_TYPE func_body  (10)
	function : INK . ID '(' par_list ')' ARROW RET_TYPE new_lines func_body  (11)
	function : INK . ID '(' ')' ARROW RET_TYPE new_lines func_body  (12)

	ID  shift 4
	.  error


state 2
	$accept : program . $end  (0)
	program : program . function new_lines  (1)
	program : program . function  (4)

	$end  accept
	INK  shift 1
	.  error

	function  goto 5


state 3
	program : function . new_lines  (2)
	program : function .  (3)

	NEWLINE  shift 6
	$end  reduce 3
	INK  reduce 3

	new_lines  goto 7


state 4
	function : INK ID . '(' par_list ')' ARROW RET_TYPE func_body  (9)
	function : INK ID . '(' ')' ARROW RET_TYPE func_body  (10)
	function : INK ID . '(' par_list ')' ARROW RET_TYPE new_lines func_body  (11)
	function : INK ID . '(' ')' ARROW RET_TYPE new_lines func_body  (12)

	'('  shift 8
	.  error


state 5
	program : program function . new_lines  (1)
	program : program function .  (4)

	NEWLINE  shift 6
	$end  reduce 4
	INK  reduce 4

	new_lines  goto 9


state 6
	new_lines : NEWLINE .  (8)

	.  reduce 8


state 7
	program : function new_lines .  (2)
	new_lines : new_lines . NEWLINE  (7)

	NEWLINE  shift 10
	$end  reduce 2
	INK  reduce 2


state 8
	function : INK ID '(' . par_list ')' ARROW RET_TYPE func_body  (9)
	function : INK ID '(' . ')' ARROW RET_TYPE func_body  (10)
	function : INK ID '(' . par_list ')' ARROW RET_TYPE new_lines func_body  (11)
	function : INK ID '(' . ')' ARROW RET_TYPE new_lines func_body  (12)

	IMG  shift 11
	GRAY_IMG  shift 12
	VID  shift 13
	GRAY_VID  shift 14
	NUM  shift 15
	REAL  shift 16
	BOOL  shift 17
	')'  shift 18
	.  error

	par_list  goto 19
	datatype  goto 20
	par  goto 21


state 9
	program : program function new_lines .  (1)
	new_lines : new_lines . NEWLINE  (7)

	NEWLINE  shift 10
	$end  reduce 1
	INK  reduce 1


state 10
	new_lines : new_lines NEWLINE .  (7)

	.  reduce 7


state 11
	datatype : IMG .  (18)

	.  reduce 18


state 12
	datatype : GRAY_IMG .  (19)

	.  reduce 19


state 13
	datatype : VID .  (20)

	.  reduce 20


state 14
	datatype : GRAY_VID .  (21)

	.  reduce 21


state 15
	datatype : NUM .  (22)

	.  reduce 22


state 16
	datatype : REAL .  (23)

	.  reduce 23


state 17
	datatype : BOOL .  (24)

	.  reduce 24


state 18
	function : INK ID '(' ')' . ARROW RET_TYPE func_body  (10)
	function : INK ID '(' ')' . ARROW RET_TYPE new_lines func_body  (12)

	ARROW  shift 22
	.  error


state 19
	function : INK ID '(' par_list . ')' ARROW RET_TYPE func_body  (9)
	function : INK ID '(' par_list . ')' ARROW RET_TYPE new_lines func_body  (11)
	par_list : par_list . ',' par  (15)

	')'  shift 23
	','  shift 24
	.  error


state 20
	par : datatype . ID  (17)

	ID  shift 25
	.  error


state 21
	par_list : par .  (16)

	.  reduce 16


state 22
	function : INK ID '(' ')' ARROW . RET_TYPE func_body  (10)
	function : INK ID '(' ')' ARROW . RET_TYPE new_lines func_body  (12)

	IMG  shift 11
	GRAY_IMG  shift 12
	VID  shift 13
	GRAY_VID  shift 14
	NUM  shift 15
	REAL  shift 16
	VOID  shift 26
	BOOL  shift 17
	.  error

	RET_TYPE  goto 27
	datatype  goto 28


state 23
	function : INK ID '(' par_list ')' . ARROW RET_TYPE func_body  (9)
	function : INK ID '(' par_list ')' . ARROW RET_TYPE new_lines func_body  (11)

	ARROW  shift 29
	.  error


state 24
	par_list : par_list ',' . par  (15)

	IMG  shift 11
	GRAY_IMG  shift 12
	VID  shift 13
	GRAY_VID  shift 14
	NUM  shift 15
	REAL  shift 16
	BOOL  shift 17
	.  error

	datatype  goto 20
	par  goto 30


state 25
	par : datatype ID .  (17)

	.  reduce 17


state 26
	RET_TYPE : VOID .  (14)

	.  reduce 14


state 27
	function : INK ID '(' ')' ARROW RET_TYPE . func_body  (10)
	function : INK ID '(' ')' ARROW RET_TYPE . new_lines func_body  (12)

	NEWLINE  shift 6
	'{'  shift 31
	.  error

	new_lines  goto 32
	func_body  goto 33


state 28
	RET_TYPE : datatype .  (13)

	.  reduce 13


state 29
	function : INK ID '(' par_list ')' ARROW . RET_TYPE func_body  (9)
	function : INK ID '(' par_list ')' ARROW . RET_TYPE new_lines func_body  (11)

	IMG  shift 11
	GRAY_IMG  shift 12
	VID  shift 13
	GRAY_VID  shift 14
	NUM  shift 15
	REAL  shift 16
	VOID  shift 26
	BOOL  shift 17
	.  error

	RET_TYPE  goto 34
	datatype  goto 28


state 30
	par_list : par_list ',' par .  (15)

	.  reduce 15


state 31
	func_body : '{' . stmt_list '}'  (5)
	func_body : '{' . new_lines stmt_list '}'  (6)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	NEWLINE  shift 6
	ID  shift 42
	'{'  shift 43
	.  error

	new_lines  goto 44
	stmt_list  goto 45
	stmt  goto 46
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 32
	new_lines : new_lines . NEWLINE  (7)
	function : INK ID '(' ')' ARROW RET_TYPE new_lines . func_body  (12)

	NEWLINE  shift 10
	'{'  shift 31
	.  error

	func_body  goto 60


state 33
	function : INK ID '(' ')' ARROW RET_TYPE func_body .  (10)

	.  reduce 10


state 34
	function : INK ID '(' par_list ')' ARROW RET_TYPE . func_body  (9)
	function : INK ID '(' par_list ')' ARROW RET_TYPE . new_lines func_body  (11)

	NEWLINE  shift 6
	'{'  shift 31
	.  error

	new_lines  goto 61
	func_body  goto 62


state 35
	return_stmt : RETURN . expr_pred new_lines  (34)
	return_stmt : RETURN . VOID new_lines  (35)

	NEG_OP  shift 63
	VOID  shift 64
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 73


state 36
	img_decl : IMG . ID '<' NUM_LIT ',' NUM_LIT '>' new_lines  (44)
	img_decl : IMG . ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (45)
	img_decl : IMG . ID '<' PATH '>' new_lines  (46)
	img_decl : IMG . ID '=' expr_pred new_lines  (47)

	ID  shift 74
	.  error


state 37
	gray_img_decl : GRAY_IMG . ID '<' NUM_LIT ',' NUM_LIT '>' new_lines  (48)
	gray_img_decl : GRAY_IMG . ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (49)
	gray_img_decl : GRAY_IMG . ID '<' PATH '>' new_lines  (50)
	gray_img_decl : GRAY_IMG . ID '=' expr_pred new_lines  (51)

	ID  shift 75
	.  error


state 38
	vid_decl : VID . ID '<' NUM_LIT ',' NUM_LIT '>' new_lines  (52)
	vid_decl : VID . ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (53)

	ID  shift 76
	.  error


state 39
	gray_vid_decl : GRAY_VID . ID '<' NUM_LIT ',' NUM_LIT '>' new_lines  (54)
	gray_vid_decl : GRAY_VID . ID '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (55)

	ID  shift 77
	.  error


state 40
	num_decl : NUM . ID new_lines  (56)
	num_decl : NUM . ID '=' expr_pred new_lines  (57)
	num_array_decl : NUM . array_element ID new_lines  (60)
	num_array_decl : NUM . array_element ID '=' ID new_lines  (61)
	num_array_decl : NUM . array_element ID '=' brak_pred new_lines  (62)

	ID  shift 78
	'['  shift 79
	.  error

	array_element  goto 80


state 41
	real_decl : REAL . ID new_lines  (58)
	real_decl : REAL . ID '=' expr_pred new_lines  (59)
	real_array_decl : REAL . array_element ID new_lines  (63)
	real_array_decl : REAL . array_element ID '=' ID new_lines  (64)
	real_array_decl : REAL . array_element ID '=' brak_pred new_lines  (65)

	ID  shift 81
	'['  shift 79
	.  error

	array_element  goto 82


state 42
	call_stmt : ID . '(' arg_list ')'  (75)
	call_stmt : ID . '(' ')'  (76)
	in_built_call_stmt : ID . DOT_OP ID '(' arg_list ')'  (79)
	in_built_call_stmt : ID . DOT_OP ID '(' ')'  (80)
	expr_stmt : ID . '=' expr_pred new_lines  (95)
	expr_stmt : ID . array_element '=' expr_pred new_lines  (96)

	DOT_OP  shift 83
	'('  shift 84
	'='  shift 85
	'['  shift 79
	.  error

	array_element  goto 86


state 43
	stmt : '{' . new_lines stmt_list '}'  (32)
	stmt : '{' . stmt_list '}'  (33)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	NEWLINE  shift 6
	ID  shift 42
	'{'  shift 43
	.  error

	new_lines  goto 87
	stmt_list  goto 88
	stmt  goto 46
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 44
	func_body : '{' new_lines . stmt_list '}'  (6)
	new_lines : new_lines . NEWLINE  (7)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	NEWLINE  shift 10
	ID  shift 42
	'{'  shift 43
	.  error

	stmt_list  goto 89
	stmt  goto 46
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 45
	func_body : '{' stmt_list . '}'  (5)
	stmt_list : stmt_list . stmt  (26)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	ID  shift 42
	'{'  shift 43
	'}'  shift 90
	.  error

	stmt  goto 91
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 46
	stmt_list : stmt .  (25)

	.  reduce 25


state 47
	stmt : decl_stmt .  (27)

	.  reduce 27


state 48
	stmt : call_stmt . new_lines  (28)

	NEWLINE  shift 6
	.  error

	new_lines  goto 92


state 49
	stmt : in_built_call_stmt . new_lines  (29)

	NEWLINE  shift 6
	.  error

	new_lines  goto 93


state 50
	stmt : expr_stmt .  (30)

	.  reduce 30


state 51
	stmt : return_stmt .  (31)

	.  reduce 31


state 52
	decl_stmt : img_decl .  (36)

	.  reduce 36


state 53
	decl_stmt : gray_img_decl .  (37)

	.  reduce 37


state 54
	decl_stmt : vid_decl .  (38)

	.  reduce 38


state 55
	decl_stmt : gray_vid_decl .  (39)

	.  reduce 39


state 56
	decl_stmt : num_decl .  (40)

	.  reduce 40


state 57
	decl_stmt : real_decl .  (41)

	.  reduce 41


state 58
	decl_stmt : num_array_decl .  (42)

	.  reduce 42


state 59
	decl_stmt : real_array_decl .  (43)

	.  reduce 43


state 60
	function : INK ID '(' ')' ARROW RET_TYPE new_lines func_body .  (12)

	.  reduce 12


state 61
	new_lines : new_lines . NEWLINE  (7)
	function : INK ID '(' par_list ')' ARROW RET_TYPE new_lines . func_body  (11)

	NEWLINE  shift 10
	'{'  shift 31
	.  error

	func_body  goto 94


state 62
	function : INK ID '(' par_list ')' ARROW RET_TYPE func_body .  (9)

	.  reduce 9


state 63
	expr_pred : NEG_OP . expr_pred  (88)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 95


state 64
	return_stmt : RETURN VOID . new_lines  (35)

	NEWLINE  shift 6
	.  error

	new_lines  goto 96


state 65
	expr_pred : BOOL_LIT .  (84)

	.  reduce 84


state 66
	call_stmt : ID . '(' arg_list ')'  (75)
	call_stmt : ID . '(' ')'  (76)
	in_built_call_stmt : ID . DOT_OP ID '(' arg_list ')'  (79)
	in_built_call_stmt : ID . DOT_OP ID '(' ')'  (80)
	expr_pred : ID .  (81)
	expr_pred : ID . array_element  (91)

	DOT_OP  shift 83
	'('  shift 84
	'['  shift 79
	LOG_OP  reduce 81
	REL_OP  reduce 81
	NEWLINE  reduce 81
	BINARY_OP  reduce 81
	UNARY_OP  reduce 81
	')'  reduce 81
	','  reduce 81
	']'  reduce 81

	array_element  goto 97


state 67
	expr_pred : NUM_LIT .  (82)

	.  reduce 82


state 68
	expr_pred : REAL_LIT .  (83)

	.  reduce 83


state 69
	expr_pred : INV_OP . expr_pred  (94)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 98


state 70
	expr_pred : '(' . expr_pred ')'  (87)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 99


state 71
	expr_pred : call_stmt .  (89)

	.  reduce 89


state 72
	expr_pred : in_built_call_stmt .  (90)

	.  reduce 90


state 73
	return_stmt : RETURN expr_pred . new_lines  (34)
	expr_pred : expr_pred . REL_OP expr_pred  (85)
	expr_pred : expr_pred . LOG_OP expr_pred  (86)
	expr_pred : expr_pred . BINARY_OP expr_pred  (92)
	expr_pred : expr_pred . UNARY_OP  (93)

	LOG_OP  shift 100
	REL_OP  shift 101
	NEWLINE  shift 6
	BINARY_OP  shift 102
	UNARY_OP  shift 103
	.  error

	new_lines  goto 104


state 74
	img_decl : IMG ID . '<' NUM_LIT ',' NUM_LIT '>' new_lines  (44)
	img_decl : IMG ID . '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (45)
	img_decl : IMG ID . '<' PATH '>' new_lines  (46)
	img_decl : IMG ID . '=' expr_pred new_lines  (47)

	'<'  shift 105
	'='  shift 106
	.  error


state 75
	gray_img_decl : GRAY_IMG ID . '<' NUM_LIT ',' NUM_LIT '>' new_lines  (48)
	gray_img_decl : GRAY_IMG ID . '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (49)
	gray_img_decl : GRAY_IMG ID . '<' PATH '>' new_lines  (50)
	gray_img_decl : GRAY_IMG ID . '=' expr_pred new_lines  (51)

	'<'  shift 107
	'='  shift 108
	.  error


state 76
	vid_decl : VID ID . '<' NUM_LIT ',' NUM_LIT '>' new_lines  (52)
	vid_decl : VID ID . '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (53)

	'<'  shift 109
	.  error


state 77
	gray_vid_decl : GRAY_VID ID . '<' NUM_LIT ',' NUM_LIT '>' new_lines  (54)
	gray_vid_decl : GRAY_VID ID . '<' NUM_LIT ',' NUM_LIT ',' NUM_LIT '>' new_lines  (55)

	'<'  shift 110
	.  error


state 78
	num_decl : NUM ID . new_lines  (56)
	num_decl : NUM ID . '=' expr_pred new_lines  (57)

	NEWLINE  shift 6
	'='  shift 111
	.  error

	new_lines  goto 112


state 79
	array_element : '[' . expr_pred ']'  (97)
	array_element : '[' . expr_pred ',' expr_pred ']'  (98)
	array_element : '[' . expr_pred ',' expr_pred ',' expr_pred ']'  (99)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 113


state 80
	num_array_decl : NUM array_element . ID new_lines  (60)
	num_array_decl : NUM array_element . ID '=' ID new_lines  (61)
	num_array_decl : NUM array_element . ID '=' brak_pred new_lines  (62)

	ID  shift 114
	.  error


state 81
	real_decl : REAL ID . new_lines  (58)
	real_decl : REAL ID . '=' expr_pred new_lines  (59)

	NEWLINE  shift 6
	'='  shift 115
	.  error

	new_lines  goto 116


state 82
	real_array_decl : REAL array_element . ID new_lines  (63)
	real_array_decl : REAL array_element . ID '=' ID new_lines  (64)
	real_array_decl : REAL array_element . ID '=' brak_pred new_lines  (65)

	ID  shift 117
	.  error


state 83
	in_built_call_stmt : ID DOT_OP . ID '(' arg_list ')'  (79)
	in_built_call_stmt : ID DOT_OP . ID '(' ')'  (80)

	ID  shift 118
	.  error


state 84
	call_stmt : ID '(' . arg_list ')'  (75)
	call_stmt : ID '(' . ')'  (76)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	')'  shift 119
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 120
	arg_list  goto 121


state 85
	expr_stmt : ID '=' . expr_pred new_lines  (95)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 122


state 86
	expr_stmt : ID array_element . '=' expr_pred new_lines  (96)

	'='  shift 123
	.  error


state 87
	new_lines : new_lines . NEWLINE  (7)
	stmt : '{' new_lines . stmt_list '}'  (32)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	NEWLINE  shift 10
	ID  shift 42
	'{'  shift 43
	.  error

	stmt_list  goto 124
	stmt  goto 46
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 88
	stmt_list : stmt_list . stmt  (26)
	stmt : '{' stmt_list . '}'  (33)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	ID  shift 42
	'{'  shift 43
	'}'  shift 125
	.  error

	stmt  goto 91
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 89
	func_body : '{' new_lines stmt_list . '}'  (6)
	stmt_list : stmt_list . stmt  (26)

	RETURN  shift 35
	IMG  shift 36
	GRAY_IMG  shift 37
	VID  shift 38
	GRAY_VID  shift 39
	NUM  shift 40
	REAL  shift 41
	ID  shift 42
	'{'  shift 43
	'}'  shift 126
	.  error

	stmt  goto 91
	decl_stmt  goto 47
	call_stmt  goto 48
	in_built_call_stmt  goto 49
	expr_stmt  goto 50
	return_stmt  goto 51
	img_decl  goto 52
	gray_img_decl  goto 53
	vid_decl  goto 54
	gray_vid_decl  goto 55
	num_decl  goto 56
	real_decl  goto 57
	num_array_decl  goto 58
	real_array_decl  goto 59


state 90
	func_body : '{' stmt_list '}' .  (5)

	.  reduce 5


state 91
	stmt_list : stmt_list stmt .  (26)

	.  reduce 26


state 92
	new_lines : new_lines . NEWLINE  (7)
	stmt : call_stmt new_lines .  (28)

	NEWLINE  shift 10
	RETURN  reduce 28
	IMG  reduce 28
	GRAY_IMG  reduce 28
	VID  reduce 28
	GRAY_VID  reduce 28
	NUM  reduce 28
	REAL  reduce 28
	ID  reduce 28
	'{'  reduce 28
	'}'  reduce 28


state 93
	new_lines : new_lines . NEWLINE  (7)
	stmt : in_built_call_stmt new_lines .  (29)

	NEWLINE  shift 10
	RETURN  reduce 29
	IMG  reduce 29
	GRAY_IMG  reduce 29
	VID  reduce 29
	GRAY_VID  reduce 29
	NUM  reduce 29
	REAL  reduce 29
	ID  reduce 29
	'{'  reduce 29
	'}'  reduce 29


state 94
	function : INK ID '(' par_list ')' ARROW RET_TYPE new_lines func_body .  (11)

	.  reduce 11


state 95
	expr_pred : expr_pred . REL_OP expr_pred  (85)
	expr_pred : expr_pred . LOG_OP expr_pred  (86)
	expr_pred : NEG_OP expr_pred .  (88)
	expr_pred : expr_pred . BINARY_OP expr_pred  (92)
	expr_pred : expr_pred . UNARY_OP  (93)

	LOG_OP  shift 100
	REL_OP  shift 101
	BINARY_OP  shift 102
	NEWLINE  reduce 88
	UNARY_OP  reduce 88
	')'  reduce 88
	','  reduce 88
	']'  reduce 88


state 96
	new_lines : new_lines . NEWLINE  (7)
	return_stmt : RETURN VOID new_lines .  (35)

	NEWLINE  shift 10
	RETURN  reduce 35
	IMG  reduce 35
	GRAY_IMG  reduce 35
	VID  reduce 35
	GRAY_VID  reduce 35
	NUM  reduce 35
	REAL  reduce 35
	ID  reduce 35
	'{'  reduce 35
	'}'  reduce 35


state 97
	expr_pred : ID array_element .  (91)

	.  reduce 91


state 98
	expr_pred : expr_pred . REL_OP expr_pred  (85)
	expr_pred : expr_pred . LOG_OP expr_pred  (86)
	expr_pred : expr_pred . BINARY_OP expr_pred  (92)
	expr_pred : expr_pred . UNARY_OP  (93)
	expr_pred : INV_OP expr_pred .  (94)

	LOG_OP  shift 100
	REL_OP  shift 101
	BINARY_OP  shift 102
	NEWLINE  reduce 94
	UNARY_OP  reduce 94
	')'  reduce 94
	','  reduce 94
	']'  reduce 94


state 99
	expr_pred : expr_pred . REL_OP expr_pred  (85)
	expr_pred : expr_pred . LOG_OP expr_pred  (86)
	expr_pred : '(' expr_pred . ')'  (87)
	expr_pred : expr_pred . BINARY_OP expr_pred  (92)
	expr_pred : expr_pred . UNARY_OP  (93)

	LOG_OP  shift 100
	REL_OP  shift 101
	BINARY_OP  shift 102
	UNARY_OP  shift 103
	')'  shift 127
	.  error


state 100
	expr_pred : expr_pred LOG_OP . expr_pred  (86)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 128


state 101
	expr_pred : expr_pred REL_OP . expr_pred  (85)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 129


state 102
	expr_pred : expr_pred BINARY_OP . expr_pred  (92)

	NEG_OP  shift 63
	BOOL_LIT  shift 65
	ID  shift 66
	NUM_LIT  shift 67
	REAL_LIT  shift 68
	INV_OP  shift 69
	'('  shift 70
	.  error

	call_stmt  goto 71
	in_built_call_stmt  goto 72
	expr_pred  goto 130


state 103
	expr_pred : expr_pred UNARY_OP .  (93)

	.  reduce 93


state 104
	new_lines : new_lines . NEWLINE  (7)
	return_stmt : RETURN expr_pred new_lines .  (34)
